--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv=x-ua-compatible content="IE=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
 <meta name=robots content="index, follow">
-<title>Marcello</title>
+<title>Marcello Galhardo</title>
 <meta name=description content>
 <meta name=author content>
 <link rel=canonical href=https://marcellogalhardo.dev/>
@@ -24,21 +24,21 @@
 </noscript>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-7LK7ENB813"></script>
 <script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-7LK7ENB813',{anonymize_ip:!1})}</script>
-<meta property="og:title" content="Marcello">
+<meta property="og:title" content="Marcello Galhardo">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello">
+<meta property="og:url" content="https://marcellogalhardo.dev/"><meta property="og:site_name" content="Marcello Galhardo">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Marcello">
+<meta name=twitter:title content="Marcello Galhardo">
 <meta name=twitter:description content>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Marcello","url":"https://marcellogalhardo.dev/","description":"","thumbnailUrl":"https://marcellogalhardo.dev/favicon.ico","sameAs":["https://twitter.com/marcellogalhard","https://github.com/marcellogalhardo/","https://www.linkedin.com/in/marcellogalhardo/"]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"Marcello Galhardo","url":"https://marcellogalhardo.dev/","description":"","thumbnailUrl":"https://marcellogalhardo.dev/favicon.ico","sameAs":["https://twitter.com/marcellogalhard","https://github.com/marcellogalhardo/","https://www.linkedin.com/in/marcellogalhardo/"]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://marcellogalhardo.dev/ accesskey=h title="Marcello (Alt + H)">Marcello</a>
+<a href=https://marcellogalhardo.dev/ accesskey=h title="Marcello Galhardo (Alt + H)">Marcello Galhardo</a>
 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
